--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.mycompany.app</groupId>
-  <artifactId>demo</artifactId>
+  <artifactId>my-app</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>demo</name>
+  <name>my-app</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -32,7 +32,7 @@
                   http://localhost:9000
                 </sonar.host.url>
 		<sonar.token>
-			sqp_a768ad4530d13f42eb1d6f7decc070896d14705f
+			sqp_ac6080601ff56c48fb9c5f9fb45ed08c65ecbce7
 		</sonar.token>
 	        <sonar.login>admin</sonar.login>
 	        <sonar.password>password</sonar.password>
